--- a/index.html
+++ b/index.html
@@ -5,35 +5,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="./assets/images/other_img/favicon.png">
     <link rel="stylesheet" href="./assets/styles/normalize.css-master/normalize.css">
-    <link rel="stylesheet" href="/styles/css/style.css">
+    <link rel="stylesheet" href="styles/css/style.css">
     <title>Solar System</title>
-
 </head>
 
 <body>
-    <div class="container">
+    <div class="container container_hidden">
         <header class="header">
-            <div class="logo">
+            <div class="header__logo logo">
                 <img class="logo__img" src="./assets/images/other_img/logo.png" alt="logo">
             </div>
-            <div class="sun">
-                <div class="sun__img"></div>
+            <div class="header__img sun">
+                <img src="/assets/images/other_img/sun.png" class="sun__img">
+                <img src="/assets/images/other_img/sunSmall.png" class="sun__imgS">
             </div>
-            <nav class="menu">
-                <ul class="menu__items">
-                    <li class="menu__item"><a class="menu__link" href="#widgets">Data</a></li>
-                    <li class="menu__item"><a class="menu__link" href="#">Statistics</a></li>
-                </ul>
-            </nav>
+            <div class="header__menu">
+                <nav class="header__menu_nav menu">
+                    <ul class="menu__items">
+                        <li class="menu__item"><a data-goto=".widgets" class="menu__link" href="#">Data</a></li>
+                        <li class="menu__item"><a data-goto=".statistics" class="menu__link" href="#">Statistics</a></li>
+                    </ul>
+                </nav>
+                <div class="header__menu_burger">
+                    <span></span>
+                </div>
+            </div>
         </header>
+    </div>
         <main class="main">
-            <div class="widgets" id="widgets">
-                <h1 class="section-title widgets__title">Learn<br>Solar System</h1>
+            <div class="container container_hidden">
+                <div class="widgets">
+                    <h1 class="section-title widgets__title">Learn<br>Solar System</h1>
+                    <div class="slider">
+                        <div class="slider__wrapper">
+                            <ul class="widgets__items slider__tape"></ul>
+                        </div>
+                        <div class="slider__controls">
+                            <div class="slider__control slider__control_prev"></div>
+                            <div class="slider__control slider__control_next"></div>
+                        </div>
+                    </div>
+                </div>
+                <div class="planet-info"></div>
+            </div>
+            <div class="container">
+                <div class="statistics">
+                    <h2 class="section-title statistics__title">Statistics</h2>
+                    <div class="statistics__row">
+                        <div class="statistics__img-astro">
+                            <p class="statistics__astro-text">Hi, I'm Nick. I will help you to understand how the planets differ from each other.</p>
+                            <img src="./assets/images/other_img/astronaut.png" alt="astronaut" class="statistics__astro-pic">
+                        </div>
+                        <div class="statistics__chart-wrap">
+                            <form class="statistics__form" name="form">
+                                <select class="statistics__input" name="input" id="">
+                                    <option value="default" selected="true" disabled="disabled">Choose an option</option>
+                                </select>
+                                <button class="statistics__btn">Compare</button>
+                            </form>
+                            <div class="statistics__chart-field">
+                                 <canvas id="сhart" class="statistics__chart-body"></canvas>
+                                <img src="./assets/images/other_img/comet.png" alt="comet" class="statistics__img-comet">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </main>
-    </div>
-
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script type="module" src="./scripts/script.js"></script>
 </body>
 
